# cosimo-synth

./: .gitignore  AGENTS.md  ARTICULATION_SYSEX_ARCHITECTURE_PLAN.md  AUV3_RESEARCH_AND_PLAN.md  DESIGN.json  DESIGN.md  DESKTOP_PATCH_VIEW_ARCHITECTURE_REVIEW.md  DRUM_BUSS_REVERSE_ENGINEERING_PLAN.md  FX_PLUGIN_UI_ARCHITECTURE.md  IOS_AUV3_NATIVE_SHELL_REFACTOR_PLAN.md  KEYBOARD_INVESTIGATION.md  MSEG_VITAL_FOUNDATION_DRAFT.md  PLATFORM_UNIFICATION_AND_WARP_SPRINT_PLAN.md  PRODUCT.md  PROGRESS.txt  SERUM_WAVETABLE_BUNDLING_PLAN.md  TRANSIENT_3_MSEG_3_ADSR_MOD_ROUTING_PLAN.md  TRANSIENT_ADSR_EDITOR_PROTOTYPE.html  TRANSIENT_DESKTOP_PATCH_VIEW_EXTRACTION_TEST_PLAN.md  TRANSIENT_EFFECT_PRESET_SYSTEM_PLAN.md  TRANSIENT_IOS_REACT_MIGRATION_PLAN.md  TRANSIENT_OTT_LAB_PLAN.md  TRANSIENT_PATH1_POLYPHONY_IMPLEMENTATION_PLAN.md  TRANSIENT_PER_VOICE_FILTER_PLAN.md  TRANSIENT_SEQFX_ARCHITECTURE_PLAN.md  TRANSIENT_SEQFX_AUX_BUMP_PROTOTYPE.html  TRANSIENT_SEQFX_AUX_ENVELOPE_IMPLEMENTATION_PLAN.md  TRANSIENT_SEQFX_AUX_SOURCE_REFACTOR_PLAN.md  TRANSIENT_SEQFX_CROSS_CHAIN_DRAG_PLAN.md  TRANSIENT_SEQFX_SERIAL_CHAIN_REFACTOR_PLAN.md  TRANSIENT_SERUM_WARP_VISUALIZER.html  TRANSIENT_UNISON_IMPLEMENTATION_PLAN.md  TRANSIENT_WARP_MODE_CMAJTEST_PLAN.md  TRANSIENT_WORKER_MIP_TDD_PLAN.md  VITAL_AND_SERUM_LFO_RESEARCH.md  WavetableSynth.cmajor  WavetableSynth.cmajorpatch  WavetableSynth.iOS.cmajorpatch  bench.py  build_assets.py  (+19 more)
TRANSIENT_SEQFX_AUX_UI_MOCKUPS/: HANDOFF.md  index.html  inline-build.mjs  notes.md  vite.config.mjs
assets/: factory-bank-catalog.json  factory-bank.json  factory-table-catalog.json
cmajor/: Chorus.cmajor  Distortion.cmajor  FilterSpectrumAnalyzer.cmajor  FilterSpectrumCommon.cmajor  FixedFrameOscillator.cmajor  Mseg.cmajor  WavetableSynth.cmajor
demo/: one_note.mid
docs/: spectral-partial-shape-refactor-plan.md
dummy Project/: dum 3.als  dumm-2.als  dummy.als  scoring-seqfx-demo.als
fx/: build-effect.mjs  prod-effect.mjs  vite.config.mjs  vite.effects.config.mjs
interface-extrusion-toolkit/: .gitignore  README.md  package-lock.json  package.json
ios_auv3/: CMakeLists.txt  expected_host_smoke.json  vite.config.mjs
ios_auv3/Entitlements/: CosimoSharedWavetableLibrary.entitlements
ios_auv3/Source/: CosimoAUv3HostHarness.h  CosimoAUv3HostHarness.mm  CosimoCmajorPlugin.h  CosimoHost-Info.plist.in  CosimoHostMain.mm  CosimoHostViewController.h  CosimoHostViewController.mm  CosimoPluginMain.cpp  CosimoSharedWavetableLibrary.h  CosimoSharedWavetableLibrary.mm  CosimoStandaloneApp.cpp  cmaj_StaticLibraryShim.cpp
live_dev_plugin/: CMakeLists.txt
mockups/: preset-browser-d.html  preset-browser.html  test-preset-bar.html
native/: ArticulationTriggerConfigState.h  CosimoCmajorMidiBridge.h  FutureDawNoteMetaBridge.h  ModulationRuntimeRestore.h
patch_gui/: articulation-worker-service.js  articulations.js  dev-harness-ios.html  dev-harness-ios.mjs  dev-harness.html  dev-harness.mjs  factory-bank-display-data.js  factory-bank-manifest.mjs  index.ios-host.js  index.ios.html  index.ios.js  index.ios.js.map  index.js  mockup-massive-x-ios.html  modulation.js  mseg-controller.js  mseg.js  mseg.mjs  patch-worker-services.js  renderer-harness.html  renderer-harness.mjs  resource-client.js  responsive-layout.js  responsive-layout.mjs  stored-state-runtime-mirror.js  theme.js  wavetable-bank.js  wavetable-bank.mjs  wavetable-display.d.ts  wavetable-display.js  wavetable-display.mjs  wavetable-mip.mjs  wavetable-worker.js  wavetable-worker.mjs
scripts/: build_cmajplugin_vst3.sh  build_desktop_native.sh  build_drum_buss_probe_devices.py  build_ios_factory_library_zip.sh  build_live_dev_plugin.sh  drum_buss_analyze_sine_sweep.py  drum_buss_analyze_sweep.py  drum_buss_compare_drive_candidate.py  drum_buss_drive_pipeline.py  drum_buss_fit_drive.py  drum_buss_harness.py  drum_buss_parameter_sweep.py  drum_buss_sine_drive_sweep.py  ensure_cmajor_runtime.py  generate_chorus_lab_plugin.sh  generate_ios_auv3_plugin.sh  generate_ios_auv3_xcode_project.sh  generate_ott_lab_plugin.sh  generate_seqfx_plugin.sh  import_factory_tables.py  install_chorus_lab_cmajplugin.sh  install_cmajplugin_vst3.sh  install_fx_cmajplugin.sh  install_ott_lab_cmajplugin.sh  install_seqfx_cmajplugin.sh  install_seqfx_vst3.sh  relaunch_ableton_dummy2.sh  render_spectral_chord_resonator_proofs.py  run_desktop_native_dev.sh  run_ios_auv3_host_smoke.py  validate-cinematic3d.js
tests/: test_articulations.mjs  test_bench.py  test_chorus_probe.py  test_desktop_native_keyboard_probe.mjs  test_desktop_patch_view_browser.mjs  test_desktop_standalone_loader.mjs  test_desktop_widget_adapters_browser.mjs  test_distortion_probe.py  test_editor_curve_geometry.mjs  test_effect_preset_bar_browser.mjs  test_effect_preset_contract.mjs  test_effect_preset_migrations.mjs  test_effect_preset_schema.mjs  test_effect_preset_state.mjs  test_effect_preset_v2_schema.mjs  test_effect_snapshot_bank.mjs  test_effect_snapshots.mjs  test_effect_state_contract.mjs  test_effect_view_loader.mjs  test_filter_modulation_stability.py  test_fixed_frame_probe.py  test_future_daw_note_meta_bridge.mjs  test_fx_build_args.mjs  test_ios_auv3_build.py  test_ios_patch_view_browser.mjs  test_mip_selection.py  test_modulation_bridge.mjs  test_modulation_matrix_probe.py  test_mseg_cmajor_probe.py  test_mseg_editor.mjs  test_mseg_reference.py  test_mseg_renderer.mjs  test_note_dispatcher_probe.py  test_ott_lab_probe.py  test_ott_lab_view_browser.mjs  test_patch_view_layout.mjs  test_runtime_state_coordinator.py  test_runtime_wavetable_mip_probe.py  test_seqfx_aux_source.mjs  test_seqfx_crusher_preview.mjs  (+30 more)
tools/desktop_native/: CMakeLists.txt
tools/desktop_native/Source/: cmaj_PatchLoaderPlugin.cpp
transient/: SEQFX_CELL_EFFECT_PROTOTYPES.html  articulation-keyboard-assignment-prototype.html  articulation-map-prototypes.html  effect-header-snapshot-refactor-plan.md  filter-range-editor-demo.css  filter-range-editor-demo.html  filter-range-editor-demo.tsx  filter-range-editor-demo.vite.config.mjs  seqfx-beat-bar-demarcation-mockups.html  (+9 more)
ui/: build.mjs  (+7 more)
(+379 files in other folders)
